testing/framework/resources/Advanced/Failing/mondrian/query219.e
23598	1997	25663.0000
28206	1997	2237.0000
27694	1997	41580.0000
30268	1997	23591.0000
23688	1997	21333.0000
20319	1997	26079.0000
21215	1997	25011.0000
33858	1997	35257.0000
22478	1997	2117.0000
\N	1997	39329.0000
39696	1997	24576.0000
